# TailLeader

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt
packaging/: tailleader.service
scripts/: normalize_db.py  start_tailleader.sh
systemd/: tailleader.service
tailleader/: __init__.py  aircraft_db.py  aircraft_type_normalizer.py  app.py  config.example.yaml  config.yaml  db.py  init_db.py  poller.py
tailleader/static/: all-registrations.html  app.js  index.html  manifest.json  styles.css  sw.js
