[project]
name = "tailleader"
version = "0.1.0"
description = "ADS-B tail number tracker with FastAPI and SQLite"
readme = "README.md"
authors = [{ name = "TailLeader contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.0",
  "httpx==0.26.0",
  "aiosqlite==0.20.0",
  "pydantic==2.9.0",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.2",
  "psutil==7.1.3",
]

[project.urls]
homepage = "https://github.com/fungiblemoose/TailLeader"
repository = "https://github.com/fungiblemoose/TailLeader"

[tool.uvicorn]
host = "0.0.0.0"
port = 8088
app = "tailleader.app:app"

[tool.setuptools]
packages = ["tailleader"]
